QML Engine: Support for "OPTIONS" method for XMLHTTPRequest was added.

Support for OPTIONS method was added to QQmlXMLHttpRequest. Tests for
OPTIONS method in XMLHttpRequest were added.

[ChangeLog][QtQml][QQmlXMLHttpRequest] QQmlXMLHttpRequest now
supports the OPTION method in HTTP requests.

Task-number: QTBUG-35892
Change-Id: Ibbcf3ecddeb8ced64d8c3e52b777dd6ec0ed98f7
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>